creating the login section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,31 @@
                 <
             </div>
             <div class="right">
-                <div class="login">
-                    <h1>hello</h1>
+                <div class="loginform">
+                    <input type="text" placeholder="Email address or phone number">
                 </div>
-            </div>    
+                <div class="loginform">
+                    <input type="password" placeholder="Password">
+                </div>
+                <div class="loginform">
+                    <div class="login">
+                        <button>log in</button>
+                    </div>
+                </div>
+                <div class="loginform">
+                    <div class="reset">
+                        <h1>Forgotten password?</h1>
+                    </div>
+                </div>
+                <div class="loginform">
+                    <div class="signup">
+                        <button>Create New Account</button>
+                    </div>
+                </div>  
+                <div class="text">
+                    <p><a href="#">Create a Page</a> for a celebrity, brand or buisness</p>
+                </div>  
+            </div>
+
         </div>
 </html>
