--- a/index.html
+++ b/index.html
@@ -9,33 +9,38 @@
                 <div class="left1">
                     <div class="logo">
                         <img src="assets/pictures/logo.svg" alt="logo">
+                    </div>
+                    <div class="left2">
+                        <p>Facebook helps you connect and share with the people in your life.</p>
                     </div> 
-                    <p>Facebook helps you connect and share with the people in your life.</p>
                 </div>
                 <
             </div>
             <div class="right">
-                <div class="loginform">
-                    <input type="text" placeholder="Email address or phone number">
-                </div>
-                <div class="loginform">
-                    <input type="password" placeholder="Password">
-                </div>
-                <div class="loginform">
-                    <div class="login">
-                        <button>log in</button>
+                <div class="card">
+                    <div class="loginform">
+                        <input type="text" placeholder="Email address or phone number">
+                    </div>
+                    <div class="loginform">
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <div class="loginform">
+                        <div class="login">
+                            <button>log in</button>
+                        </div>
+                    </div>
+                    <div class="loginform">
+                        <div class="reset">
+                            <h1>Forgotten password?</h1>
+                        </div>
+                    </div>
+                    <div class="loginform">
+                        <div class="signup">
+                            <button>Create New Account</button>
+                        </div>
                     </div>
                 </div>
-                <div class="loginform">
-                    <div class="reset">
-                        <h1>Forgotten password?</h1>
-                    </div>
-                </div>
-                <div class="loginform">
-                    <div class="signup">
-                        <button>Create New Account</button>
-                    </div>
-                </div>  
+                  
                 <div class="text">
                     <p><a href="#">Create a Page</a> for a celebrity, brand or buisness</p>
                 </div>  
