--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
                         <p>Facebook helps you connect and share with the people in your life.</p>
                     </div> 
                 </div>
-                <
             </div>
             <div class="right">
                 <div class="card">
@@ -46,5 +45,60 @@
                 </div>  
             </div>
 
+        </div>
+        <div class="footer">
+          <div class="content">
+            <div class="languages">
+                <a href="#"> English (UK)</a>
+                <a href="#">العربية</a>
+                <a href="#">Français (France)</a>
+                <a href="#">Deutsch</a>
+                <a href="#">Español</a>
+                <a href="#">Русский</a>
+                <a href="#">Português (Brasil)</a>
+                <a href="#">Italiano</a>
+                <a href="#">हिन्दी</a>
+                <a href="#">中文(简体)</a>
+                <a href="#">日本語</a>
+            </div>
+            <div class="partners">
+                <a href="#">Sign Up</a>       
+                <a href="#">Log In</a>
+                <a href="#">Messenger</a>
+                <a href="#">Facebook Lite</a>
+                <a href="#">Watch</a>
+                <a href="#">Places</a>
+                <a href="#">Games</a>
+                <a href="#">Marketplace</a>
+                <a href="#">Facebook </a>
+                <a href="#">Pay</a>
+                <a href="#">Oculus</a>
+                <a href="#">Portal</a>
+                <a href="#">Instagram</a>
+                <a href="#">Bulletin</a>
+                <a href="#">Local</a>
+                <a href="#">Fundraisers</a>
+                <a href="#">Services</a>
+                <a href="#">Voting </a>
+                <a href="#">Information </a>
+                <a href="#">Centre</a>
+                <a href="#">Groups</a>
+                <a href="#">About</a>
+                <a href="#">Create</a>
+                <a href="#">adCreate</a>
+                <a href="#">Page</a>
+                <a href="#">Developers</a>
+                <a href="#">Careers</a>
+                <a href="#">Privacy</a>
+                <a href="#">Cookies</a>
+                <a href="#">AdChoices</a>
+                <a href="#">Terms</a>
+                <a href="#">Help</a>
+                <a href="#">Settings</a>
+            </div>
+            <div class="text1">
+                Meta © 2022
+            </div>
+          </div>  .
         </div>
 </html>
