--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Facebook clone</title>
         <link rel="stylesheet" href="assets/styles/style.css">
+        <link rel = "icon" href = "assets/pictures/icon.png" type = "image/x-icon">
     </head>
     <body>
         <div class="container">
