--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div class="container">
+            <!-- Start left section -->
             <div class="left">
                 <div class="left1">
                     <div class="logo">
@@ -16,6 +17,9 @@
                     </div> 
                 </div>
             </div>
+            <!-- End left section -->
+
+            <!-- Start right section -->
             <div class="right">
                 <div class="card">
                     <div class="loginform">
@@ -45,8 +49,10 @@
                     <p><a href="#">Create a Page</a> for a celebrity, brand or buisness</p>
                 </div>  
             </div>
-
+            <!-- End left section -->
         </div>
+
+         <!-- Start footer section -->
         <div class="footer">
           <div class="content">
             <div class="languages">
@@ -102,4 +108,6 @@
             </div>
           </div>  .
         </div>
+        <!-- Start footer section -->
+    </body>
 </html>
